--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,7 @@
+server.port=8084
 
+eureka.client.fetchRegistry=true
+eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8085/eureka}
+
+zuul.sensitiveHeaders= Cookie,Set-Cookie
+zuul.ignored-headers= Access-Control-Allow-Credentials, Access-Control-Allow-Origin
