GMTA - sk02_api_gateway

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,4 +6,5 @@ eureka.client.serviceUrl.defaultZone=${EUREKA_URI:http://localhost:8085/eureka}
 zuul.sensitiveHeaders= Cookie,Set-Cookie
 zuul.ignored-headers= Access-Control-Allow-Credentials, Access-Control-Allow-Origin
 
-zuul.host.connect-timeout-millis=5000
+ribbon.okhttp.enabled=true
+ribbon.eureka.enabled=true
